--- a/_layouts/archive-taxonomies.html
+++ b/_layouts/archive-taxonomies.html
@@ -1,4 +1,4 @@
----
+<!-- <!-- ---
 layout: default
 ---
 
@@ -82,4 +82,4 @@ layout: default
     const main = document.getElementById("site-main");
     main.scrollTop = 0;
   }
-</script>
+</script> -->
